Fix dropdown overlap

--- a/src/features/tables/TableItem/TableItem.module.scss
+++ b/src/features/tables/TableItem/TableItem.module.scss
@@ -1,13 +1,13 @@
 .item {
   height: 150px;
   width: 150px;
-  transform: translateY(0);
-  transition: box-shadow 0.2s ease, border-color 0.2s ease, transform 0.3s ease;
+
+  transition: box-shadow 0.2s ease, border-color 0.2s ease, margin-top 0.3s ease;
   border-radius: 0.375rem;
   border: 1px solid var(--secondary-color);
   &:hover {
     border-color: transparent;
-    transform: translateY(-2px);
+    margin-top: -2px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 1px 5px;
   }
   padding: 0.5rem;
